# ResEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GenerateProjects.bat  README.md  premake5.lua
AEngine/: .gitignore  AEngine.h  CMakeLists.txt  dependencies.lua  premake5.lua
AEngine-Demo/: .gitignore  CMakeLists.txt  imgui.ini  premake5.lua  test.lua
AEngine-Demo/assets/animations/Knife/: idleKnife.dae  slashKnife.dae
AEngine-Demo/assets/animations/enemy/: alert.dae  attack.dae  crawl.dae  death.dae  run.dae  walk.dae
AEngine-Demo/assets/grid/: test.grid
AEngine-Demo/assets/models/: box.gltf  sphere.gltf
AEngine-Demo/assets/models/Book/: book.gltf
AEngine-Demo/assets/models/Box/: box.gltf
AEngine-Demo/assets/models/Building/: buildingv1.gltf
AEngine-Demo/assets/models/Button/: button2.gltf
AEngine-Demo/assets/models/DeskSetup/: Desksetup.gltf
AEngine-Demo/assets/models/Door/: door.gltf
AEngine-Demo/assets/models/Enemy/: enemy.dae  enemy.mtl
AEngine-Demo/assets/models/Knife/: idleKnife.dae  knife.dae  knife.gltf  slashKnife.dae
AEngine-Demo/assets/models/NPC/: NPC.gltf
AEngine-Demo/assets/models/Rock_1/: rock_1.mtl
AEngine-Demo/assets/models/Rock_2/: rock_2.mtl
AEngine-Demo/assets/models/SkeleTree_1/: SkeleTree_1.mtl
AEngine-Demo/assets/models/SkeleTree_2/: SkeleTree_2.mtl
AEngine-Demo/assets/models/Sphere/: sphere.gltf
AEngine-Demo/assets/models/Supplies/: supply.mtl
AEngine-Demo/assets/models/Table/: Table.gltf
AEngine-Demo/assets/models/TeachDesk/: TeachDesk.gltf
AEngine-Demo/assets/models/Tree_1/: Tree_1.mtl
AEngine-Demo/assets/models/Tree_2/: Tree_2.mtl
AEngine-Demo/assets/models/enemy/: enemy.mtl
AEngine-Demo/assets/models/test/: attack.dae  enemy.dae  walk.dae
AEngine-Demo/assets/models/testobject/: untitled.mtl
AEngine-Demo/assets/scenes/: bdi-test.scene  export.scene  level1.scene  physics.scene  physicsTest.scene  renderTest.scene  serialized.scene  test.scene
AEngine-Demo/assets/scripts/: AstarTest.lua  Book.lua  Button.lua  Teacher.lua  TestEmotions.lua  UIScript.lua  bdi.lua  coreLoop.lua  exit.lua  menu.lua  messaging.lua  move.lua  patrol.lua  player.lua  projectile.lua  supplies.lua
AEngine-Demo/assets/scripts/examples/: coreLoop.lua  move.lua  playerOld.lua  test.lua
AEngine-Demo/assets/shaders/: animation.shader  diffuse_fragment.shader  diffuse_vertex.shader  flat_fragment.shader  font.shader  multitexture.shader  notexture.shader  simple.shader  skybox.shader  terrain.shader  transparent.shader  water.shader
AEngine-Demo/assets/test/Enemy/: animEnemy.gltf
AEngine-Demo/assets/test/TestItems/: materials.gltf  materialtest.gltf
AEngine-Demo/src/: CMakeLists.txt  DemoApp.cpp
AEngine/include/AEngine/: AEngine.h
AEngine/src/: AEngine.h  CMakeLists.txt
AEngine/src/AEngine/: CMakeLists.txt
AEngine/src/AEngine/AI/: BDIAgent.cpp  BDIAgent.h  CMakeLists.txt  FCM.cpp  FCM.h  Grid.cpp  Grid.h  Predicate.cpp  Predicate.h
AEngine/src/AEngine/Core/: Application.cpp  Application.h  CMakeLists.txt  EntryPoint.cpp  Identifier.cpp  Identifier.h  Input.cpp  Input.h  InputImpl.cpp  InputImpl.h  InputManager.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  PerspectiveCamera.cpp  PerspectiveCamera.h  TimeStep.cpp  TimeStep.h  Timer.cpp  Timer.h  Types.h  Window.cpp  Window.h
AEngine/src/AEngine/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  EventHandler.cpp  EventHandler.h  EventQueue.cpp  EventQueue.h  KeyEvent.h  MouseEvent.h
AEngine/src/AEngine/FSM/: CMakeLists.txt  FSM.cpp  FSM.h  FSMGraph.cpp  FSMGraph.h  FSMState.cpp  FSMState.h
AEngine/src/AEngine/ImGui/: CMakeLists.txt  Editor.cpp  Editor.h  ImguiBuild.cpp
AEngine/src/AEngine/Input/: CMakeLists.txt  Input.cpp  Input.h  InputBuffer.cpp  InputBuffer.h  InputImpl.h  KeyCodes.h
AEngine/src/AEngine/Math/: CMakeLists.txt  Math.cpp  Math.hpp
AEngine/src/AEngine/Messaging/: CMakeLists.txt  Message.h  MessageAgent.cpp  MessageAgent.h  MessageService.cpp  MessageService.h  MessageServiceImpl.cpp  MessageServiceImpl.h
AEngine/src/AEngine/Physics/: CMakeLists.txt  Collider.h  CollisionBody.h  Physics.cpp  Physics.h  PlayerController.cpp  PlayerController.h  Raycaster.cpp  Raycaster.h  Renderer.h
AEngine/src/AEngine/Render/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GLModel.cpp  GLModel.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsContextImpl.cpp  GraphicsContextImpl.h  HeightMap.cpp  HeightMap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderCommand.cpp  RenderCommand.h  RenderCommandImpl.cpp  RenderCommandImpl.h  RenderContext.cpp  RenderContext.h  RenderContextImpl.cpp  RenderContextImpl.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  (+12 more)
AEngine/src/AEngine/Resource/: Asset.h  AssetManager.h  CMakeLists.txt  MeshManager.cpp  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
AEngine/src/AEngine/Scene/: CMakeLists.txt  Components.h  DebugCamera.cpp  DebugCamera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManagerImpl.cpp  SceneManagerImpl.h  SceneSerialiser.cpp  SceneSerialiser.h
AEngine/src/AEngine/Script/: CMakeLists.txt  EntityScript.cpp  EntityScript.h  Script.cpp  Script.h  ScriptComponent.cpp  (+9 more)
AEngine/src/Core/: Application.cpp  Application.h  EntryPoint.h  GLWindow.cpp  InputManager.cpp  InputManager.h  IntervalTimer.cpp  IntervalTimer.h  Logger.h  Math.hpp  PerspectiveCamera.cpp  PerspectiveCamera.h  Timer.cpp  Timer.h  Window.cpp
AEngine/src/ECS/: Components.h  DebugCamera.cpp  DebugCamera.h  Entity.h  Scene.cpp  Scene.h
AEngine/src/Platform/: CMakeLists.txt
AEngine/src/Render/: Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
AEngine/src/Resource/: MeshManager.cpp  MeshManager.h  ShaderManager.h  TextureManager.cpp
AEngine/test/Core/: CMakeLists.txt  TimeStep_test.cpp
(+116 files in other folders)
