add_subdirectory(Core)
add_subdirectory(Events)
add_subdirectory(FSM)
add_subdirectory(ImGui)
add_subdirectory(Input)
add_subdirectory(Math)
add_subdirectory(Messaging)
add_subdirectory(Physics)
add_subdirectory(Render)
add_subdirectory(Resource)
add_subdirectory(Scene)
add_subdirectory(Script)
add_subdirectory(Skybox)
add_subdirectory(Water)
